Finer grain modeling of assert & cfg interaction

--- a/pythran/pythran.cfg
+++ b/pythran/pythran.cfg
@@ -8,7 +8,7 @@ optimizations = pythran.optimizations.InlineBuiltins
                 pythran.optimizations.ConstantFolding
                 pythran.optimizations.IterTransformation
                 pythran.optimizations.LoopFullUnrolling
-                pythran.transformations.FalsePolymorphism
+                pythran.transformations.ScalarRenaming
                 pythran.optimizations.DeadCodeElimination
                 pythran.optimizations.PatternTransform
                 pythran.optimizations.Square
